refactors lints and chores: wip
